--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,3 +26,11 @@
 .count {
   color: $orange;
 }
+
+.demo-btn-orders {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 25px;
+  padding: 10px;
+}
