--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,38 @@
-<div class="container" style='margin-top: 80px'>
-  <div class="row">
-    <div class="col-4 offset-4">
-      <h2 class='text-center mt-3'>Sign up</h2>
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
+<div class="container text-center p-2" style='width: 400px; margin: 12px auto' >
+  <h2 style="margin-top: 70px">Création de compte</h2>
 
-        <div class="form-inputs">
-          <%= f.input :first_name,
-                      label: false,
-                      placeholder:'First Name',
-                      required: true %>
-          <%= f.input :last_name,
-                       label: false,
-                      placeholder:'Last Name', required: true%>
-          <%= f.input :telephone,
-                      label: false,
-                      placeholder:'Phone Number', required: true%>
-          <%= f.input :email,
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "email", placeholder: 'Email' },
-                      label: false%>
-          <%= f.input :password,
-                      required: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password", placeholder: 'Password' },
-                      label: false %>
-          <%= f.input :password_confirmation,
-                      required: true,
-                      input_html: { autocomplete: "new-password", placeholder: 'Confirm Password' },
-                      label: false %>
-        </div>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-        <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
-        </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
+    <div class="form-inputs">
+      <%= f.input :first_name,
+                  required: true,
+                  label: "Prénom" %>
+      <%= f.input :last_name,
+                  required: true,
+                  label: "Nom" %>
+      <%= f.input :telephone,
+                  required: true,
+                  label: "Numéro de Téléphone"%>
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <%= f.input :password,
+                  label: "Mot de passe",
+                  required: true,
+                  hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "Saisissez votre mot de passe" } %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  label: "Confirmation du mot de passe",
+                  input_html: { autocomplete: "Confirmez votre mot de passe" } %>
     </div>
-  </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Créér mon compte", class:"btn btn-dark"%>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
 </div>
