--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,33 +1,27 @@
-<div class="container" style='margin-top: 80px'>
-  <div class="row">
-    <div class="col-6 offset-3">
-      <h2>Change your password</h2>
+<h2>Changez votre mot de passe</h2>
 
-      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-        <%= f.error_notification %>
+<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <%= f.error_notification %>
 
-        <%= f.input :reset_password_token, as: :hidden %>
-        <%= f.full_error :reset_password_token %>
+  <%= f.input :reset_password_token, as: :hidden %>
+  <%= f.full_error :reset_password_token %>
 
-        <div class="form-inputs">
-          <%= f.input :password,
-                      label: "false",
-                      required: true,
-                      autofocus: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password", placeholder: 'New Password' } %>
-          <%= f.input :password_confirmation,
-                      label: false,
-                      required: true,
-                      input_html: { autocomplete: "new-password", placeholder: 'Confirm your new password' } %>
-        </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "Change my password" %>
-        </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
-    </div>
+  <div class="form-inputs">
+    <%= f.input :password,
+                label: "Nouveau mot de passe",
+                required: true,
+                autofocus: true,
+                hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length),
+                input_html: { autocomplete: "Nouveau mot de passe" } %>
+    <%= f.input :password_confirmation,
+                label: "Confirmer votre nouveau mot de passe",
+                required: true,
+                input_html: { autocomplete: "Nouveau mot de passe" } %>
   </div>
-</div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Changer mon mot de passe", class:"btn btn-dark" %>
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
