--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container" style='margin-top: 80px'>
   <div class="row">
     <div class="col-6 offset-3">
-      <h2>Forgot your password?</h2>
+      <h2>Vous avez oublié votre mot de passe ?</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= f.error_notification %>
@@ -16,7 +16,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Send me reset password instructions" %>
+          <%= f.button :submit, "Renvoyez moi les instructions", class:"btn btn-dark" %>
         </div>
       <% end %>
 
