--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,20 +2,20 @@
 <div class='dashboard-container'>
 
 <div class="d-flex">
-<div class="border-end" style="height=100%">
+<div class="border-end" style="width:200px">
   <%= render 'shared/sidebar' %>
 </div>
 
     <div class="flex-grow-1 pt-4">
       <div>
-        <h1 class="text-center">Votre commande numéro <%= @order.id %> de chez</h1>
+        <h1 class="text-center">Votre commande numéro <%= @order.id %> de chez
         <div class="d-flex align-items-center">
           <%= link_to orders_path, class: 'text-decoration-none' do %>
             <i class="fa-solid fa-circle-chevron-left" style='font-size: 24px; color:black'></i>
           <% end %>
           <h1 class="text-center flex-grow-1">  <%= @order.order_lines.first.supplier.name %></h1>
         </div>
-
+        </h1>
         <% @order.order_lines.each do |line| %>
           <%= render partial: 'shared/card_order_line', locals: {line: line, order: @order}  %>
         <% end %>
@@ -29,12 +29,14 @@
           <% else %>
             <h1 class="text-center">Ce fournisseur propose également:</h1>
             <div class="row">
-              <%  @other_products.each do |product| %>
+              <% @other_products.each do |product| %>
+                <% if product.quantity_in_stock != 0 %>
                 <div class="col-6">
-                    <li class="list-group-item">
+                  <li class="list-group-item">
                       <%= render partial: 'shared/card_product', locals: {product: product}  %>
-                    </li>
+                  </li>
                 </div>
+                <% end %>
               <% end %>
             </div>
           <% end %>
