--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -7,8 +7,8 @@
   align-items: center;
 }
 
-.center {
-  justify-content: space-between;
+.fixform {
+  margin-left: 10px;
 }
 
 .card-product img {
