--- a/app/views/shared/_card_product.html.erb
+++ b/app/views/shared/_card_product.html.erb
@@ -21,7 +21,7 @@
       </div>
     </div class="center">
     <%# <div class='me-1'> %>
-    <%= simple_form_for @order_line, html: {class: 'd-flex justify-content-center me-5'} do |f| %>
+    <%= simple_form_for @order_line, html: {class: 'd-flex justify-content-center me-5 fixform' } do |f| %>
       <%= f.hidden_field :product_id, value: product.id %>
 
         <%= f.input :quantity, label: false, type: 'number', input_html: {class: 'quantity text-center',
