--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,9 @@
-<div class='dashboard-container'>
 
-<div class="d-flex">
+<div class='dashboard-container d-flex'>
 
-<div class="border-end" style="width:200px">
- <%= render 'shared/sidebar' %>
-</div>
+ <div class="border-end" style="width:200px">
+  <%= render 'shared/sidebar' %>
+ </div>
 
   <div class="flex-grow-1 mx-5" style='height: 650px margin-bottom:120px;'>
     <h2> <strong class="count" ><%= @supplier_orders.count %></strong> commandes fournisseurs en cours</h2>
